// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Link should add rel="noopener" when target="_blank" 1`] = `
<DocumentFragment>
  .c1 {
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #0068EF;
}

.c1:hover {
  color: #049;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c0 {
  font-family: 'Montserrat','Helvetica Neue',Helvetica,Arial,sans-serif;
  line-height: 1.4;
  font-weight: 500;
}

.c0 * {
  box-sizing: border-box;
}

<div
    class="c0"
  >
    <a
      class="c1"
      color="primary"
      rel="noopener"
      target="_blank"
    >
      Dummy
    </a>
  </div>
</DocumentFragment>
`;

exports[`Link should not add rel="noopener" when target is not "_blank" 1`] = `
<DocumentFragment>
  .c1 {
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #0068EF;
}

.c1:hover {
  color: #049;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c0 {
  font-family: 'Montserrat','Helvetica Neue',Helvetica,Arial,sans-serif;
  line-height: 1.4;
  font-weight: 500;
}

.c0 * {
  box-sizing: border-box;
}

<div
    class="c0"
  >
    <a
      class="c1"
      color="primary"
    >
      Dummy
    </a>
  </div>
</DocumentFragment>
`;

exports[`Link should render correctly with no props without throwing 1`] = `
<DocumentFragment>
  .c1 {
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #0068EF;
}

.c1:hover {
  color: #049;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c0 {
  font-family: 'Montserrat','Helvetica Neue',Helvetica,Arial,sans-serif;
  line-height: 1.4;
  font-weight: 500;
}

.c0 * {
  box-sizing: border-box;
}

<div
    class="c0"
  >
    <a
      class="c1"
      color="primary"
    >
      Dummy
    </a>
  </div>
</DocumentFragment>
`;
